// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders correctly 1`] = `
<span
  className="ui-text ui-text--body"
>
  Text goes here
</span>
`;

exports[`<Text /> renders correctly with element prop 1`] = `
<h2
  className="ui-text ui-text--display"
>
  Heading
</h2>
`;

exports[`<Text /> renders correctly with modifier prop 1`] = `
<span
  className="ui-text ui-text--body ui-text--bold"
>
  Text goes here
</span>
`;
